clusters/rapid-scale-us-west-2/default/app-loader.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apploader
  name: apploader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apploader
  template:
    metadata:
      labels:
        app: apploader
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: default
        #alpha.eksctl.io/nodegroup-name: rapid-scale-us-west-2-ng
      serviceAccountName: appsimulator
      containers:
      - env:
        - name: NUM_OF_LOAD_THREADS
          value: "10"
        - name: SLEEP_BETWEEN_CYCLE
          value: "4"
        - name: APP_URL
          value: "http://django-app-840600863.us-west-2.elb.amazonaws.com/logistics"
        - name: DEPLOY_NAME
          value: "appsimulator"
        image: 274739860030.dkr.ecr.us-west-2.amazonaws.com/loader:multiarch-py3
        imagePullPolicy: Always
        name: apploader
        command: ["/app-loader.sh"]
        resources:
          requests:
            cpu: 1024m
            memory: 512Mi
          limits:
            cpu: 4096m
            memory: 512Mi
