clusters/rapid-scale-us-west-2/default/appsimulator.yaml
---
#apiVersion: v1
#kind: ServiceAccount
#metadata:
#  name: appsimulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: appsimulator
  name: appsimulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appsimulator
  template:
    metadata:
      labels:
        app: appsimulator
    spec:
      nodeSelector:
        alpha.eksctl.io/nodegroup-name: rapid-scale-us-west-2-ng
      serviceAccountName: appsimulator
      containers:
      - env:
        - name: MIN_SLEEP_BETWEEN_CYCLE
          value: "10"
        - name: MAX_SLEEP_BETWEEN_CYCLE
          value: "10"
        - name: QUEUE_URL
          value: "https://sqs.us-west-2.amazonaws.com/274739860030/vertscaler-state"
        - name: APP_QUEUE_URL
          value: "https://sqs.us-west-2.amazonaws.com/274739860030/db"
        - name: DEPLOY_NAME
          value: "appsimulator"
        - name: RADIAN_INTERVAL
          value: "0.2"
        - name: RADIAN_MAX
          value: "3.14"
        - name: MIN_AT_CYCLE_START
          value: "1"
        - name: SERVER_SCALE_RATIO
          value: "1"
        - name: CLIENT_SCALE_RATIO
          value: "1"
        - name: SERVER_DEPLOY_PREFIX
          value: "django-app"
        - name: CLIENT_DEPLOY_PREFIX
          value: "apploader"
        - name: RULE_ENGINE_DEPLOY_PREFIX
          value: "ruleengine"
        image: 274739860030.dkr.ecr.us-west-2.amazonaws.com/loader:multiarch-py3
        imagePullPolicy: Always
        name: appsimulator
        command: ["/appsimulator.sh"]
        resources:
          requests:
            cpu: 128m
            memory: 128Mi
