clusters/rapid-scale-us-west-2/default/rule-engine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ruleengine
  name: ruleengine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruleengine
  template:
    metadata:
      labels:
        app: ruleengine
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: default
      serviceAccountName: appsimulator
      volumes:
      - name: secrets-store-orders
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: rapidscale
      containers:
      - name: ruleengine
        image: 274739860030.dkr.ecr.us-west-2.amazonaws.com/loader:multiarch-py3
        imagePullPolicy: Always
        volumeMounts:
        - name: secrets-store-orders
          mountPath: "/mnt/secrets"
        command: ["/rule-engine.sh"]
        resources:
          requests:
            cpu: 500m
            memory: 768Mi
          limits:
            cpu: 500m
            memory: 1024Mi
