clusters/rapid-scale-us-west-2/default/django-svc-ingress-deploy-before.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingres
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /logistics/todaysorders
    alb.ingress.kubernetes.io/success-codes: '200-301'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/load-balancer-name: django-app
spec:
  rules:
    - http:
        paths:
          - path: /logistics
            pathType: Prefix
            backend:
              service:
                name: django-svc
                port: 
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: default
  labels:
    app: django-app
spec:
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: default
      serviceAccountName: appsimulator
      containers:
      - name: app
        volumeMounts:
        - name: secrets-store-orders
          mountPath: "/mnt/secrets"
        image: 274739860030.dkr.ecr.us-west-2.amazonaws.com/djangoapp:multiarch-py3
        imagePullPolicy: Always
        command: ["/usr/src/app/start.sh"]
        resources:
          requests:
            cpu: 512m
            memory: 512Mi
        ports:
          - containerPort: 8000
      volumes:
      - name: secrets-store-orders
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: rapidscale
